[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cf-agent"
version = "1.0.0"
description = "CLI for managing AEM Content Fragments — Moveworks Marketplace"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "click>=8.1.0",
]

[project.scripts]
cf-agent = "cf_agent.agent:cli"

[tool.hatch.build.targets.wheel]
packages = ["cf_agent"]
